Unify common scripts in single file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,9 +12,7 @@ stages:
   script:
     - xbps-install --sync --update --yes
     - xbps-install --yes git
-    - ./common/prepare.sh
-    - ./common/build.sh
-    - ./common/deploy.sh
+    - ./publish.sh
 
 publish-x86_64:
   variables:
