--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,4 +11,24 @@ variables:
   DELETED_PATH: /tmp/deleted
   PKGS_PATH: /tmp/pkgs
 
+.publish_template:
+  stage: publish
+  rules:
+    - changes:
+        - srcpkgs/**/*
+        - .gitlab-ci.yml
+        - common/$ARCH.yml
+        - common/*.sh
+      variables:
+        IS_CI_UPDATE: "true"
+  resource_group: publishing
+  image: ghcr.io/void-linux/xbps-src-masterdir:20210313rc01-$VOID_BOOTSTRAP
+  script:
+    - xbps-install --sync --update --yes
+    - xbps-install --yes git
+    - ./common/prepare.sh
+    - ./common/build.sh
+    - ./common/deploy.sh
+
+
 include: common/*.yml
