--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ variables:
   rules:
     - changes:
         - srcpkgs/**/*
+    - changes:
         - .gitlab-ci.yml
         - common/$ARCH.yml
         - common/*.sh
