Work around collision issues

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ variables:
   MODIFIED_PATH: /tmp/modified
   DELETED_PATH: /tmp/deleted
   PKGS_PATH: /tmp/pkgs
-  UPSTREAM_PACKAGES_PATH: upstream-packages
+  UPSTREAM_PATH: /tmp/upstream
 
 .publish_template:
   stage: publish
