--- a/common/x86_64.yml
+++ b/common/x86_64.yml
@@ -1,5 +1,5 @@
-publish-x86_64:
+build-x86_64:
   variables:
     ARCH: x86_64
     VOID_BOOTSTRAP: x86_64
-  extends: .publish_template
+  extends: .build_template
