Split packages that are rebuilt due to CI updates

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ variables:
   ADDED_PATH: /tmp/added
   MODIFIED_PATH: /tmp/modified
   DELETED_PATH: /tmp/deleted
+  REBUILD_PATH: /tmp/rebuild
   PKGS_PATH: /tmp/pkgs
   UPSTREAM_PATH: /tmp/upstream
 
