Use 1 to represent "true" for env var

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ variables:
         - common/prepare.sh
         - common/build.sh
       variables:
-        IS_CI_UPDATE: "true"
+        IS_CI_UPDATE: 1
     - changes:
         - srcpkgs/**/*
     - changes:
