--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,13 +22,13 @@ variables:
         - common/prepare.sh
         - common/build.sh
       variables:
-        IS_CI_UPDATE: 1
+        IS_CI_UPDATE: "true"
     - changes:
         - srcpkgs/**/*
     - changes:
         - common/deploy.sh
       variables:
-        DEPLOY_ONLY: 1
+        DEPLOY_ONLY: "true"
   resource_group: publishing
   image: ghcr.io/void-linux/xbps-src-masterdir:20210313rc01-$VOID_BOOTSTRAP
   script:
