Use pivot file to track last successful deployment

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,9 @@ variables:
   REBUILD_PATH: /tmp/rebuild
   PKGS_PATH: /tmp/pkgs
   UPSTREAM_PATH: /tmp/upstream
+  LAST_DEPLOY_COMMIT_FILE: last_deploy_commit
+  LAST_DEPLOY_COMMIT_PATH: /tmp/last_deploy_commit
+  PAGES_BRANCH: pages
 
 .publish_template:
   stage: publish
