--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,8 @@ include: common/*.yml
 
 update_ref:
   stage: update_ref
-  needs: publish
+  needs:
+    - publish
   rules:
     - exists: 
       - $LAST_DEPLOYMENT_COMMIT_PATH
