Allow loopback webhook for Gitea

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     environment:
       - USER_UID=1000
       - USER_GID=1000
+      - GITEA__webhook__ALLOWED_HOST_LIST=loopback
     volumes:
       - ./.vcs:/data
       - /etc/timezone:/etc/timezone:ro
