--- a/.woodpecker/prepare.yml
+++ b/.woodpecker/prepare.yml
@@ -1,4 +1,8 @@
 pipeline:
+  set_remote:
+    image: "ghcr.io/void-linux/void-linux:20210220rc01-thin-x86_64"
+    commands:
+      - "./common/woodpecker/set_remote.sh"
   list:
     image: "ghcr.io/void-linux/void-linux:20210220rc01-thin-x86_64"
     commands:
