Use Alpine Linux for steps that don't need XBPS

--- a/.woodpecker/prepare.yml
+++ b/.woodpecker/prepare.yml
@@ -1,29 +1,29 @@
 pipeline:
   set_remote:
-    image: "ghcr.io/void-linux/void-linux:20210220rc01-full-x86_64"
+    image: "alpine:3.15.0"
     commands:
-      - "xbps-install --sync --update --yes"
-      - "xbps-install --yes git"
+      - "apk update"
+      - "apk add git"
       - "./common/woodpecker/set_remote.sh"
   list:
-    image: "ghcr.io/void-linux/void-linux:20210220rc01-full-x86_64"
+    image: "alpine:3.15.0"
     commands:
-      - "xbps-install --sync --update --yes"
-      - "xbps-install --yes git"
+      - "apk update"
+      - "apk add git"
       - "./common/woodpecker/list.sh"
   list_rebuild:
     when:
       path: [".woodpecker/*", "common/woodpecker/**/*"]
-    image: "ghcr.io/void-linux/void-linux:20210220rc01-full-x86_64"
+    image: "alpine:3.15.0"
     commands:
-      - "xbps-install --sync --update --yes"
-      - "xbps-install --yes git"
+      - "apk update"
+      - "apk add git"
       - "./common/woodpecker/list_rebuild.sh"
   commit:
-    image: "ghcr.io/void-linux/void-linux:20210220rc01-full-x86_64"
+    image: "alpine:3.15.0"
     commands:
-      - "xbps-install --sync --update --yes"
-      - "xbps-install --yes git"
+      - "apk update"
+      - "apk add git"
       - "./common/woodpecker/commit.sh 'Prepare packages to build' ci"
 
 branches: ["trunk"]
