Draft first try for full CI workflow

--- a/.woodpecker/package.yml
+++ b/.woodpecker/package.yml
@@ -8,13 +8,13 @@ matrix:
       LIBC: "musl"
 
 pipeline:
-  package:
+  xbps-src:
     image: "ghcr.io/void-linux/xbps-src-masterdir:20210313rc01-${BOOTSTRAP_ARCH}"
     commands:
       - "xbps-install --sync --update --yes"
       - "xbps-install --yes git openssh"
-      - "./common/woodpecker/build.sh"
-      - "./common/woodpecker/commit.sh 'Prepare compiled binaries to get published' pre"
+      - "./scripts/build.sh"
+      - './scripts/commit.sh "Prepare compiled binaries" "$LIBC"'
     secrets: ["access_token"]
 
 depends_on: ["prepare"]
