--- a/.woodpecker/deploy.yml
+++ b/.woodpecker/deploy.yml
@@ -1,5 +1,5 @@
 pipeline:
-  build:
+  publish:
     image: ghcr.io/void-linux/void-linux:20220211rc01-full-x86_64
     commands:
       - "xbps-install --sync --update --yes"
