Use new custom CI image for pipelines

--- a/.woodpecker/prepare.yml
+++ b/.woodpecker/prepare.yml
@@ -1,21 +1,17 @@
 pipeline:
   list:
-    image: "debian:sid"
+    image: "gbrlsnchs/void-linux-ci"
     commands:
-      - "apt-get update"
-      - "apt-get install --yes git"
       - "./scripts/list.sh"
   list-rebuild:
     when:
       path: [".woodpecker/*", "scripts/*"]
-    image: "debian:sid"
+    image: "gbrlsnchs/void-linux-ci"
     commands:
       - "./scripts/list_rebuild.sh"
   commit:
-    image: "debian:sid"
+    image: "gbrlsnchs/void-linux-ci"
     commands:
-      - "apt-get update"
-      - "apt-get install --yes git"
       - "./scripts/commit.sh 'Prepare packages to build' ci"
     secrets: ["access_token"]
 
