--- a/.woodpecker/package.yml
+++ b/.woodpecker/package.yml
@@ -13,7 +13,7 @@ pipeline:
       - "xbps-install --yes git openssh"
       - "./scripts/build.sh"
       - "./scripts/sign.sh"
-      - './scripts/commit.sh "$ARCH: Publish updates"'
+      - './scripts/commit.sh "$ARCH: Publish updates" pages'
     secrets: ["access_token", "signing_key"]
 
 depends_on: ["prepare"]
