--- a/.woodpecker/package.yml
+++ b/.woodpecker/package.yml
@@ -4,6 +4,8 @@ matrix:
       BOOTSTRAP_ARCH: "x86_64"
     - ARCH: "x86_64-musl"
       BOOTSTRAP_ARCH: "x86_64-musl"
+    - ARCH: "aarch64"
+    - BOOTSTRAP_ARCH: "x86_64"
 
 pipeline:
   build:
