--- a/.woodpecker/package.yml
+++ b/.woodpecker/package.yml
@@ -5,7 +5,7 @@ matrix:
     - ARCH: "x86_64-musl"
       BOOTSTRAP_ARCH: "x86_64-musl"
     - ARCH: "aarch64"
-    - BOOTSTRAP_ARCH: "x86_64"
+      BOOTSTRAP_ARCH: "x86_64"
 
 pipeline:
   build:
