--- a/.woodpecker/package.yml
+++ b/.woodpecker/package.yml
@@ -6,6 +6,8 @@ matrix:
       BOOTSTRAP_ARCH: "x86_64-musl"
     - ARCH: "aarch64"
       BOOTSTRAP_ARCH: "x86_64"
+    - ARCH: "aarch64-musl"
+      BOOTSTRAP_ARCH: "x86_64-musl"
 
 pipeline:
   build:
