--- a/.woodpecker/finish.yml
+++ b/.woodpecker/finish.yml
@@ -3,8 +3,8 @@ pipeline:
     image: "gbrlsnchs/void-linux-ci"
     commands:
       - "./scripts/generate_pages.sh"
-      - "./scripts/commit.sh /tmp/changelog pages"
+      - "CI_PUBLISH_BINS=1 ./scripts/commit.sh /tmp/changelog pages"
       - "./scripts/clean_up.sh"
-    secrets: ["access_token"]
+    secrets: ["access_token", "binrepo_token"]
 
 depends_on: ["package"]
