--- a/.woodpecker/package.yml
+++ b/.woodpecker/package.yml
@@ -17,7 +17,7 @@ pipeline:
       - "xbps-install --yes git openssh"
       - "./scripts/build.sh"
       - "./scripts/sign.sh"
-      - './scripts/commit.sh "$ARCH: Publish updates" pages'
-    secrets: ["access_token", "signing_key"]
+      - 'CI_PUBLISH_BINS=1 ./scripts/commit.sh "$ARCH: Publish updates" pages'
+    secrets: ["access_token", "signing_key", "binrepo_token"]
 
 depends_on: ["prepare"]
